<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- All the strings used in the application so far -->
    <string name="app_name">Contact Manager</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_groups">GROUPS</string>
    <string name="action_listOfContacts">LIST OF CONTACTS</string>
    <string name="action_favourites">FAVOURITES</string>
    <string name="title_activity_groups">GROUPS</string>
    <string name="heading_options">MORE OPTIONS</string>
    <string name="heading_last_name">Last Name</string>
    <string name="heading_name">NAME</string>
    <string name="heading_number">NUMBER</string>
    <string name="heading_email">EMAIL</string>
    <string name="heading_address">ADDRESS</string>
    <string name="heading_event">EVENT</string>
    <string name="group_name">Group name</string>
    <string name="person_name">Person\'s name</string>
    <string name="hint_group_name">Enter group name</string>
    <string name="hint_person_name">Enter person\'s name</string>
    <string name="hint_firstname">Enter first name</string>
    <string name="hint_lastname">Enter last name</string>
    <string name="hint_number">Enter number</string>
    <string name="hint_address">Enter address</string>
    <string name="hint_email">Enter email address</string>
    <string name="hint_date">Enter date</string>
    <string name="heading_groups">Groups</string>
    <string name="heading_listOfContacts">List of Contacts</string>
    <string name="heading_favourites">Favourites</string>
    <string name="button_sort">Sort</string>
    <string name="button_help">Help</string>
    <string name="button_contacts_to_display">Contacts to display</string>

    <string-array name="number_array">
        <item>MOBILE</item>
        <item>WORK</item>
        <item>HOME</item>
        <item>MAIN</item>
        <item>WORK FAX</item>
        <item>HOME FAX</item>
        <item>OTHER</item>
    </string-array>
    <string-array name="email_array">
        <item>HOME</item>
        <item>WORK</item>
        <item>OTHER</item>
    </string-array>
    <string-array name="address_array">
        <item>HOME</item>
        <item>WORK</item>
        <item>OTHER</item>
    </string-array>
    <string-array name="date_array">
        <item>BIRTHDAY</item>
        <item>ANNIVERSARY</item>
        <item>OTHER</item>
    </string-array>

    <string name="title_activity_add_contact">AddContact</string>
    <string name="title_activity_add_group">AddGroup</string>
    <string name="title_activity_favourites">Favourites</string>
    <string name="title_activity_option">OptionActivity</string>
    <string name="title_activity_edit_contact">EditContact</string>
    <string name="title_activity_view_contact">ViewContact</string>

</resources>